--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <a href="mailto:none7703@gmail.com" class="email">
                 <i class="far fa-envelope"></i>
                 info@example.com
-            </a>
+            </a>mjhkhbljuij
             
         </div>
     </footer>
